--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
     margin: 0;
     padding: 0;
     background-image: url('https://wallpaperaccess.com/full/1555172.jpg');
+    opacity: 0.5; /* Ajusta a opacidade para 50% */
+}
 }
 }
 
