--- a/style.css
+++ b/style.css
@@ -109,3 +109,56 @@ footer {
     bottom: 0; /* Alinha ao fundo da página */
     font-size: 1rem; /* Tamanho da fonte */
 }
+:root {
+  --primary-color: #30475E;
+  --secondary-color: #F5F7F8;
+  --font-size: 16px;
+  --max-width: 1200px; /* Largura máxima do container principal */
+}
+
+body {
+  font-family: "Chakra Petch", sans-serif;
+  background-color: #DDDDDD;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin:  
+ 0;
+  padding: 0;
+  background-image:  
+ url('https://wallpaperaccess.com/full/1555172.jpg');
+  background-size: cover; /* Ajusta a imagem para cobrir toda a área */
+}
+
+.container {
+  max-width: var(--max-width);
+  width: 100%;
+  padding: 2rem;
+}
+
+/* ... outros estilos ... */
+
+@media (max-width: 768px) {
+  .container {
+    padding: 1rem;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+  section input {
+    width: 100%;
+  }
+  .resultados-pesquisa {
+    width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  /* Estilos para telas ainda menores */
+  body {
+    font-size: 14px;
+  }
+  /* ... outros ajustes ... */
+}
